# FrameFleet

./: .gitignore  AGENTS.md  README.md  go.mod
deploy/worker-template/: README.md  init-worker.sh  worker.env.example
docs/: architecture-distilled.md  future-work.md
entry-server/: .env.example
entry-server/cmd/server/: main.go
entry-server/internal/handlers/: job_results.go  jobs.go  tasks.go  workers.go
entry-server/internal/logger/: logger.go
entry-server/internal/model/: job.go  task.go  worker.go  worker_methods.go
entry-server/internal/server/: middleware.go  routes.go  server.go
entry-server/internal/service/: job_manager.go  worker_registry.go
pkg/envfile/: envfile.go
pkg/protocol/: assemble.go  job.go  segment.go  task.go  worker.go
scripts/: smoke_task_lifecycle.sh  smoke_worker_cluster.sh  smoke_worker_cluster_real.sh  smoke_worker_single_real.sh
worker-node/: .env.example
worker-node/cmd/test-worker/: main.go
worker-node/cpp/: CMakeLists.txt  README.md
worker-node/cpp/include/framefleet_engine/: artifact.hpp  engine.hpp  protocol.hpp
worker-node/cpp/src/: artifact.cpp  engine.cpp  main.cpp  protocol.cpp
worker-node/cpp/tests/: artifact_test.cpp  protocol_test.cpp
worker-node/protocol/: engine_message.schema.json  ffaf-v1.md
worker-node/protocol/examples/: assemble_gif.completed.json  assemble_gif.request.json  failed.json  ping.completed.json  ping.request.json  process_internal_simple.completed.json  process_internal_simple.request.json  process_segment.completed.json  process_segment.failed.json  split_video.request.json  (+2 more)
(+28 files in other folders)
